@@ -60,6 +60,7 @@ public class TestDocBuilder extends AbstractDataImportHandlerTestCase {
     di.runCmd(rp, swi);
     assertEquals(Boolean.TRUE, swi.deleteAllCalled);
     assertEquals(Boolean.TRUE, swi.commitCalled);
+    assertEquals(Boolean.TRUE, swi.finishCalled);
     assertEquals(0, swi.docs.size());
     assertEquals(1, di.getDocBuilder().importStatistics.queryCount.get());
     assertEquals(0, di.getDocBuilder().importStatistics.docCount.get());
@@ -81,6 +82,7 @@ public class TestDocBuilder extends AbstractDataImportHandlerTestCase {
     di.runCmd(rp, swi);
     assertEquals(Boolean.FALSE, swi.deleteAllCalled);
     assertEquals(Boolean.FALSE, swi.commitCalled);
+    assertEquals(Boolean.TRUE, swi.finishCalled);
     assertEquals(0, swi.docs.size());
     assertEquals(1, di.getDocBuilder().importStatistics.queryCount.get());
     assertEquals(0, di.getDocBuilder().importStatistics.docCount.get());
@@ -104,6 +106,7 @@ public class TestDocBuilder extends AbstractDataImportHandlerTestCase {
     di.runCmd(rp, swi);
     assertEquals(Boolean.TRUE, swi.deleteAllCalled);
     assertEquals(Boolean.TRUE, swi.commitCalled);
+    assertEquals(Boolean.TRUE, swi.finishCalled);
     assertEquals(1, swi.docs.size());
     assertEquals(1, di.getDocBuilder().importStatistics.queryCount.get());
     assertEquals(1, di.getDocBuilder().importStatistics.docCount.get());
@@ -134,6 +137,7 @@ public class TestDocBuilder extends AbstractDataImportHandlerTestCase {
     di.runCmd(rp, swi);
     assertEquals(Boolean.FALSE, swi.deleteAllCalled);
     assertEquals(Boolean.TRUE, swi.commitCalled);
+    assertEquals(Boolean.TRUE, swi.finishCalled);
     assertEquals(1, swi.docs.size());
     assertEquals(1, di.getDocBuilder().importStatistics.queryCount.get());
     assertEquals(1, di.getDocBuilder().importStatistics.docCount.get());
@@ -168,6 +172,7 @@ public class TestDocBuilder extends AbstractDataImportHandlerTestCase {
     di.runCmd(rp, swi);
     assertEquals(Boolean.TRUE, swi.deleteAllCalled);
     assertEquals(Boolean.TRUE, swi.commitCalled);
+    assertEquals(Boolean.TRUE, swi.finishCalled);
     assertEquals(3, swi.docs.size());
     for (int i = 0; i < l.size(); i++) {
       Map<String, Object> map = (Map<String, Object>) l.get(i);
@@ -189,6 +194,8 @@ public class TestDocBuilder extends AbstractDataImportHandlerTestCase {
 
     Boolean commitCalled = Boolean.FALSE;
 
+    Boolean finishCalled = Boolean.FALSE;
+
     public SolrWriterImpl() {
       super(null, ".");
     }
@@ -207,6 +214,10 @@ public class TestDocBuilder extends AbstractDataImportHandlerTestCase {
 
     public void commit(boolean b) {
       commitCalled = Boolean.TRUE;
+    }
+    
+    public void finish() {
+      finishCalled = Boolean.TRUE;
     }
   }
 
